--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 
     <!-- Header / Navigation -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-danger sticky-top shadow">
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-danger shadow">
             <div class="container">
                 <a class="navbar-brand" href="#top">
-                    <img src="./images/pizza-place-logo.png" style="max-width: 85px;" alt="Pizza Palace Logo">
+                    <img src="./images/pizza-place-logo.png" style="max-width: 75px;" alt="Pizza Palace Logo">
                 </a>
                 <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
