--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Header / Navigation -->
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-danger shadow">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-danger shadow py-1">
             <div class="container">
                 <a class="navbar-brand" href="#top">
                     <img src="./images/pizza-place-logo.png" style="max-width: 75px;" alt="Pizza Palace Logo">
