--- a/index.html
+++ b/index.html
@@ -58,54 +58,66 @@
                     <article class="col-md-4">
                         <h4 class="text-center mb-2">Classic</h4>
                         <hr>
-                        <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
-                            <img src="./images/pepperoni-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
-                            <div class="card-body mb-md-0">
-                                <h5 class="card-title">Pepperoni Pizza</h5>
-                                <p class="card-text">Indulge in a timeless classic, generously topped with zesty
-                                    pepperoni
-                                    and rich, melty mozzarella cheese, all layered on our hand-tossed, homemade crust
-                                    that’s
-                                    baked to golden perfection for a bold and satisfying flavor in every bite.</p>
-                                <span class="badge bg-success">Special Offer</span>
-                                <p class="fs-4 fw-600">$19.99 Large two-toppings</p>
+                        <a class="no-underline"href="javascript:void(0);">
+                            <div class="card pizza-card card-hover h-100 h-override-mobile shadow" data-pizza="classic"> 
+                                <img src="./images/pepperoni-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
+                                <div class="card-body mb-md-0">
+                                    <h5 class="card-title">Pepperoni Pizza <i class="fa-solid fa-pizza-slice"></i></h5>
+                                    <p class="card-text">Indulge in a timeless classic, generously topped with zesty
+                                        pepperoni
+                                        and rich, melty mozzarella cheese, all layered on our hand-tossed, homemade
+                                        crust
+                                        that’s
+                                        baked to golden perfection for a bold and satisfying flavor in every bite.</p>
+                                    <span class="badge bg-success">Special Offer</span>
+                                    <p class="fs-4 fw-600">$19.99 Large two-toppings</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </article>
                     <article class="col-md-4">
                         <h4 class="text-center pt-3 pt-md-0 mb-2">Specialty</h4>
                         <hr>
-                        <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
-                            <img src="./images/hawaiian-pizza.jpg" class="w-100 img-fluid" alt="Hawaiian Pizza">
-                            <div class="card-body mb-md-0">
-                                <h5 class="card-title">Hawaiian Pizza</h5>
-                                <p class="card-text">Savor the perfect balance of sweet and savory with our Hawaiian
-                                    Pizza —
-                                    a crowd-pleasing favorite topped with tangy tomato sauce, melty mozzarella cheese,
-                                    tender slices of cooked ham, and juicy pineapple chunks. All of this deliciousness
-                                    rests
-                                    on our hand-crafted, homemade crust, delivering a tropical twist in every bite.</p>
-                                <span class="badge bg-success">Special Offer</span>
-                                <p class="fs-4 fw-600">$21.99 Large two-toppings</p>
+                        <a class="no-underline" href="javascript:void(0);">
+                            <div class="card pizza-card card-hover h-100 h-override-mobile shadow" data-pizza="specialty">
+                                <img src="./images/hawaiian-pizza.jpg" class="w-100 img-fluid" alt="Hawaiian Pizza">
+                                <div class="card-body mb-md-0">
+                                    <h5 class="card-title">Hawaiian Pizza <i class="fa-solid fa-pizza-slice"></i></h5>
+                                    <p class="card-text">Savor the perfect balance of sweet and savory with our Hawaiian
+                                        Pizza —
+                                        a crowd-pleasing favorite topped with tangy tomato sauce, melty mozzarella
+                                        cheese,
+                                        tender slices of cooked ham, and juicy pineapple chunks. All of this
+                                        deliciousness
+                                        rests
+                                        on our hand-crafted, homemade crust, delivering a tropical twist in every bite.
+                                    </p>
+                                    <span class="badge bg-success">Special Offer</span>
+                                    <p class="fs-4 fw-600">$21.99 Large two-toppings</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </article>
                     <article class="col-md-4">
                         <h4 class="text-center pt-3 pt-md-0 mb-2">Vegetarian</h4>
                         <hr>
-                        <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
-                            <img src="./images/vegetarian-pizza.jpg" class="w-100 img-fluid" alt="Vegetarian Pizza">
-                            <div class="card-body mb-md-0">
-                                <h5 class="card-title">Vegetarian Pizza</h5>
-                                <p class="card-text">Our Vegetarian Pizza is a flavor-packed lifesaver for any craving,
-                                    loaded with a vibrant medley of caramelized onions, earthy mushrooms, fresh basil
-                                    leaves, and a kick of jalapeño heat — all brought together with a drizzle of not
-                                    one,
-                                    but two distinct types of honey.</p>
-                                <span class="badge bg-success">Special Offer</span>
-                                <p class="fs-4 fw-600">$18.99 Large two-toppings</p>
+                        <a class="no-underline" href="javascript:void(0);">
+                            <div class="card pizza-card card-hover h-100 h-override-mobile shadow" data-pizza="vegetarian">
+                                <img src="./images/vegetarian-pizza.jpg" class="w-100 img-fluid" alt="Vegetarian Pizza">
+                                <div class="card-body mb-md-0">
+                                    <h5 class="card-title">Vegetarian Pizza <i class="fa-solid fa-pizza-slice"></i></h5>
+                                    <p class="card-text">Our Vegetarian Pizza is a flavor-packed lifesaver for any
+                                        craving,
+                                        loaded with a vibrant medley of caramelized onions, earthy mushrooms, fresh
+                                        basil
+                                        leaves, and a kick of jalapeño heat — all brought together with a drizzle of not
+                                        one,
+                                        but two distinct types of honey.</p>
+                                    <span class="badge bg-success">Special Offer</span>
+                                    <p class="fs-4 fw-600">$18.99 Large two-toppings</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </article>
                 </div>
             </div>
@@ -114,10 +126,29 @@
         <!-- Pizza Customization Form -->
         <section id="customization-your-pizza" class="py-5 bg-dark text-white customization-bg">
             <div class="container">
-                <h2 class="text-center mb-5"><b>Customize Your Pizza</b></h2>
+                <h2 class="text-center mb-5"><b>Customize Your Pizza</b></h2> <i class="fa-solid fa-pizza"></i>
                 <div class="row">
                     <div class="col-12 justify-content-center d-grid">
                         <form method="POST" action="/submit" class="form-bg p-5">
+                            <!-- Pizza Section -->
+                            <fieldset class="mb-3">
+                                <legend class="form-label"><b>Choose Pizza:</b></legend>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="pizza" id="classic"
+                                        value="classic">
+                                    <label class="form-check-label" for="classic">Classic</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="pizza" id="specialty"
+                                        value="specialty">
+                                    <label class="form-check-label" for="specialty">Specialty</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="pizza" id="vegetarian"
+                                        value="vegetarian">
+                                    <label class="form-check-label" for="vegetarian">Vegetarian</label>
+                                </div>
+                            </fieldset>
                             <!-- Pizza Size Section -->
                             <fieldset class="mb-3">
                                 <legend class="form-label"><b>Choose Size:</b></legend>
@@ -142,7 +173,8 @@
                             <!-- Toppings Section -->
                             <fieldset class="mb-3">
                                 <legend class="form-label"><b>Toppings:</b></legend>
-                                <p class="p-section-bg w-100 w-100-mobile p-2">Choose Cheese</p>
+                                <p class="p-section-bg w-100 w-100-mobile p-2">Choose Cheese <i
+                                        class="fa-solid fa-cheese"></i></p>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="checkbox" id="extra-cheese">
                                     <label class="form-check-label" for="extra-cheese">Extra Cheese</label>
@@ -161,7 +193,8 @@
                                     <label class="form-check-label" for="shredded-provolone-cheese">Shredded Provolone
                                         Cheese</label>
                                 </div>
-                                <p class="p-section-bg w-100 w-100-mobile p-2">Choose Meats</p>
+                                <p class="p-section-bg w-100 w-100-mobile p-2">Choose Meats <i
+                                        class="fa-solid fa-bacon"></i></p>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="checkbox" id="ham">
                                     <label class="form-check-label" for="ham">Ham</label>
@@ -174,7 +207,8 @@
                                     <input class="form-check-input" type="checkbox" id="bacon">
                                     <label class="form-check-label" for="bacon">Bacon</label>
                                 </div>
-                                <p class="p-section-bg w-100 w-100-mobile p-2 pt-3">Choose Non-meats</p>
+                                <p class="p-section-bg w-100 w-100-mobile p-2 pt-3">Choose Non-meats <i
+                                        class="fa-solid fa-leaf"></i></p>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="checkbox" id="mushrooms">
                                     <label class="form-check-label" for="mushrooms">Mushrooms</label>
@@ -236,11 +270,13 @@
                     </section>
                     <section class="col-md-3 text-center text-md-start mb-4">
                         <h5>Our Location</h5>
-                        <address>
+                        <address><i class="fa-solid fa-map"></i>
                             123 Pizza Street<br>
                             Cheesetown, NY 10001<br>
-                            <strong>Phone:</strong> (555) 123-4567<br>
-                            <strong>Email:</strong> contact@pizzapalace.com
+                            <i class="fa-solid fa-phone"></i> (555) 123-4567<br>
+                            <i class="fa-solid fa-envelope"></i> <a class="text-white"
+                                href="mailto:contact@pizzapalace.com">contact@pizzapalace.com</a>
+
                         </address>
                     </section>
                     <aside class="col-md-3 text-center text-md-start mb-4">
@@ -258,6 +294,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/pizza-selection.js"></script>
     <script src="https://kit.fontawesome.com/1a12f61d30.js" crossorigin="anonymous"></script>
 </body>
 
