--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <article class="col-md-4">
                         <h4 class="text-center mb-2">Classic</h4>
                         <hr>
-                        <a class="no-underline"href="javascript:void(0);">
+                        <a class="no-ukkknderline"href="javascript:void(0);">
                             <div class="card pizza-card card-hover h-100 h-override-mobile shadow" data-pizza="classic"> 
                                 <img src="./images/pepperoni-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                                 <div class="card-body mb-md-0">
