--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                             123 Pizza Street<br>
                             Cheesetown, NY 10001<br>
                             <i class="fa-solid fa-phone"></i> (555) 123-4567<br>
-                            <i class="fa-solid fa-envelope"></i> <a class="text-white"
+                            <i class="fa-solid fa-envelope"></i> <a class="text-white footer-link"
                                 href="mailto:contact@pizzapalace.com">contact@pizzapalace.com</a>
 
                         </address>
