Customized first letters of every H1 and H2 to danger-red

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <!-- Hero Section -->
         <section class="bg-dark hero text-center py-5">
             <div class="container py-4">
-                <h1 class="text-white text-shadow"><b>Welcome to Pizza Palace</b></h1>
+                <h1 class="text-white text-shadow"><b>Welcome to <span class="text-danger">P</span>izza <span
+                            class="text-danger">P</span>alace</b></h1>
                 <p class="lead-head text-white">Fresh, hot, and made just for you!</p>
             </div>
         </section>
@@ -52,7 +53,7 @@
         <!-- Menu Section -->
         <section id="our-menu" class="py-5 bg-white menu-bg">
             <div class="container">
-                <h2 class="text-center mb-5"><b>Our Menu</b></h2>
+                <h2 class="text-center mb-5"><b>Our <span class="text-danger">M</span>enu</b></h2>
                 <div class="row g-4 pb-4 pb-md-5 mb-md-5">
                     <!-- Menu Items as Articles -->
                     <article class="col-12 col-md-4">
@@ -230,7 +231,8 @@
         <!-- Pizza Customization Form -->
         <section id="customization-your-pizza" class="py-5 bg-dark text-white customization-bg">
             <div class="container">
-                <h2 class="text-center mb-5"><b>Customize Your Pizza</b></h2> <i class="fa-solid fa-pizza"></i>
+                <h2 class="text-center mb-5"><b>Customize <span class="text-danger">Y</span>our <span
+                            class="text-danger">P</span>izza</b></h2> <i class="fa-solid fa-pizza"></i>
                 <div class="row">
                     <div class="col-12 justify-content-center d-grid">
                         <form action="https://formspree.io/f/xovdllop" method="POST" class="form-bg p-5">
@@ -395,17 +397,13 @@
                         </form>
                     </div>
                 </div>
-
-
-
-
             </div>
         </section>
 
         <!-- Contact & Location Section -->
         <section id="visit-us" class="pt-5 pb-4 bg-dark text-white">
             <div class="container">
-                <h2 class="text-center mb-5">Visit Us</h2>
+                <h2 class="text-center mb-5">Visit <span class="text-danger">U</span>s</h2>
                 <div class="row">
                     <aside class="col-md-3 text-center text-md-start mb-4">
                         <img src="./images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
