--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto">
                         <li class="nav-item"><a class="nav-link text-white btm-border px-3 py-4 py-md-0"
-                                href="#our-menu">Our Menu</a></li>
+                                href="index.html">Our Menu</a></li>
                         <li class="nav-item"><a class="nav-link text-white btm-border px-3 py-4 py-md-0"
-                                href="#customization-your-pizza">Customize Your Pizza</a></li>
+                                href="customize.html">Customize Your Pizza</a></li>
                         <li class="nav-item"><a class="nav-link text-white px-3 py-4 py-md-0" href="#visit-us">Visit
                                 Us</a></li>
                     </ul>
@@ -216,178 +216,6 @@
                             </div>
                         </div>
                     </article>
-                </div>
-            </div>
-        </section>
-
-        <!-- Pizza Customization Form -->
-        <section id="customization-your-pizza" class="py-5 bg-dark text-white customization-bg">
-            <div class="container">
-                <h2 class="text-center mb-5"><b>Customize <span class="text-danger">Y</span>our <span
-                            class="text-danger">P</span>izza</b></h2> <i class="fa-solid fa-pizza"></i>
-                <div class="row">
-                    <div class="col-12 justify-content-center d-grid">
-                        <form action="https://formspree.io/f/xovdllop" method="POST" class="form-bg p-5">
-                            <!-- Pizza Section -->
-                            <fieldset class="mb-3">
-                                <legend class="form-label"><b>Choose Pizza:</b></legend>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="pizza" id="classic"
-                                        value="classic">
-                                    <label class="form-check-label" for="classic">Classic</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="pizza" id="specialty"
-                                        value="specialty">
-                                    <label class="form-check-label" for="specialty">Specialty</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="pizza" id="vegetarian"
-                                        value="vegetarian">
-                                    <label class="form-check-label" for="vegetarian">Vegetarian</label>
-                                </div>
-                            </fieldset>
-                            <!-- Pizza Size Section -->
-                            <fieldset class="mb-3">
-                                <legend class="form-label"><b>Choose Size:</b></legend>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="size" id="small" value="small">
-                                    <label class="form-check-label" for="small">Small</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="size" id="medium" value="medium">
-                                    <label class="form-check-label" for="medium">Medium</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="size" id="large" value="large">
-                                    <label class="form-check-label" for="large">Large</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="size" id="xl-large"
-                                        value="xl-large">
-                                    <label class="form-check-label" for="xl-large">XL-large</label>
-                                </div>
-                            </fieldset>
-                            <!-- Toppings Section -->
-                            <fieldset class="mb-3">
-                                <legend class="form-label"><b>Toppings:</b></legend>
-                                <p class="p-section-bg w-100 w-100-mobile p-2">Choose Cheese <i
-                                        class="fa-solid fa-cheese"></i></p>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="extra-cheese"
-                                        id="extra-cheese">
-                                    <label class="form-check-label" for="extra-cheese">Extra Cheese</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="feta-cheese" id="feta-cheese">
-                                    <label class="form-check-label" for="feta-cheese">Feta Cheese</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="cheddar-cheese-blend"
-                                        id="cheddar-cheese-blend">
-                                    <label class="form-check-label" for="cheddar-cheese-blend">Cheddar Cheese
-                                        Blend</label>
-                                </div>
-                                <div class="form-check form-check-inline pb-3">
-                                    <input class="form-check-input" type="checkbox" name="shredded-provolone-cheese"
-                                        id="shredded-provolone-cheese">
-                                    <label class="form-check-label" for="shredded-provolone-cheese">Shredded Provolone
-                                        Cheese</label>
-                                </div>
-                                <p class="p-section-bg w-100 w-100-mobile p-2">Choose Meats <i
-                                        class="fa-solid fa-bacon"></i></p>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="ham" id="ham">
-                                    <label class="form-check-label" for="ham">Ham</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="beef" id="beef">
-                                    <label class="form-check-label" for="beef">Beef</label>
-                                </div>
-                                <div class="form-check form-check-inline pb-3">
-                                    <input class="form-check-input" type="checkbox" name="bacon" id="bacon">
-                                    <label class="form-check-label" for="bacon">Bacon</label>
-                                </div>
-                                <p class="p-section-bg w-100 w-100-mobile p-2 pt-3">Choose Non-meats <i
-                                        class="fa-solid fa-leaf"></i></p>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="mushrooms" id="mushrooms">
-                                    <label class="form-check-label" for="mushrooms">Mushrooms</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="green-peppers"
-                                        id="green-peppers">
-                                    <label class="form-check-label" for="green-peppers">Green Peppers</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="spinach" id="spinach">
-                                    <label class="form-check-label" for="spinach">Spinach</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="onions" id="onions">
-                                    <label class="form-check-label" for="onions">Onions</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="diced-tomatoes"
-                                        id="diced-tomatoes">
-                                    <label class="form-check-label" for="diced-tomatoes">Diced Tomatoes</label>
-                                </div>
-                                <div class="form-check form-check-inline pb-3">
-                                    <input class="form-check-input" type="checkbox" name="pineapple" id="pineapple">
-                                    <label class="form-check-label" for="pineapple">Pineapple</label>
-                                </div>
-                            </fieldset>
-                            <!-- Crust Type Section -->
-                            <fieldset class="mb-3">
-                                <legend class="form-label"><b>Crust Type:</b></legend>
-                                <select class="form-select w-100 w-100-mobile" name="crust">
-                                    <option value="Thin Crust">Thin Crust</option>
-                                    <option value="Thick Crust">Thick Crust</option>
-                                    <option value="Cheese Stuffed">Cheese Stuffed</option>
-                                </select>
-                            </fieldset>
-                            <!-- Customer Info Section -->
-                            <hr class="mt-4">
-                            <fieldset class="mb-4">
-                                <legend class="form-label"><b>Your Information:</b></legend>
-                                <div class="row">
-                                    <!-- First Name -->
-                                    <div class="col-md-6 mb-3">
-                                        <label for="first-name" class="form-label">First Name</label>
-                                        <input type="text" class="form-control" id="first-name" name="first_name"
-                                            required>
-                                    </div>
-                                    <!-- Last Name -->
-                                    <div class="col-md-6 mb-3">
-                                        <label for="last-name" class="form-label">Last Name</label>
-                                        <input type="text" class="form-control" id="last-name" name="last_name">
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <!-- Email -->
-                                    <div class="col-md-6 mb-3">
-                                        <label for="email" class="form-label">Email Address</label>
-                                        <input type="email" class="form-control" id="email" name="email" required>
-                                    </div>
-                                    <!-- Phone Number -->
-                                    <div class="col-md-6 mb-3">
-                                        <label for="phone" class="form-label">Phone Number</label>
-                                        <input type="tel" class="form-control" id="phone" name="phone">
-                                    </div>
-                                </div>
-                                <!-- Message -->
-                                <div class="mb-3">
-                                    <label for="message" class="form-label">Message or Special Instructions</label>
-                                    <textarea class="form-control" id="message" name="message" rows="4"
-                                        required></textarea>
-                                </div>
-                            </fieldset>
-                            <!-- Add to Cart Button -->
-                            <div class="mt-4">
-                                <button type="submit" class="btn btn-danger btn-lg px-4 shadow">Add to Cart</button>
-                            </div>
-                        </form>
-                    </div>
                 </div>
             </div>
         </section>
