--- a/customize.html
+++ b/customize.html
@@ -50,14 +50,15 @@
         </section>
         <div class="bg-danger-border shadow-lg"></div>
 
-        <!-- Pizza Customization Form -->
-        <section id="customization-your-pizza" class="py-5 bg-dark text-white customization-bg">
+        <section id="customization-your-pizza" class="py-5 customization-bg text-white">
             <div class="container">
                 <h2 class="text-center mb-5"><b>Customize <span class="text-danger">Y</span>our <span
-                            class="text-danger">P</span>izza</b></h2> <i class="fa-solid fa-pizza"></i>
-                <div class="row">
-                    <div class="col-12 justify-content-center d-grid">
-                        <form action="https://formspree.io/f/xovdllop" method="POST" class="form-bg p-5">
+                            class="text-danger">P</span>izza</b></h2>
+                <i class="fa-solid fa-pizza-slice fa-2xl d-block text-center mb-4"></i>
+
+                <div class="row justify-content-center">
+                    <div class="col-md-8">
+                        <form id="pizzaForm" class="form-bg p-5">
                             <!-- Pizza Section -->
                             <fieldset class="mb-3">
                                 <legend class="form-label"><b>Choose Pizza:</b></legend>
@@ -95,7 +96,7 @@
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="size" id="xl-large"
                                         value="xl-large">
-                                    <label class="form-check-label" for="xl-large">XL-large</label>
+                                    <label class="form-check-label" for="xl-large">X-Large</label>
                                 </div>
                             </fieldset>
                             <!-- Toppings Section -->
@@ -212,9 +213,22 @@
                                         required></textarea>
                                 </div>
                             </fieldset>
-                            <!-- Add to Cart Button -->
-                            <div class="mt-4">
-                                <button type="submit" class="btn btn-danger btn-lg px-4 shadow">Add to Cart</button>
+
+                            <!-- Submit Button -->
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="mt-4 text-center">
+                                        <button type="submit" class="btn btn-danger btn-lg px-4 shadow">Add to
+                                            Cart</button>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="mt-4 text-center">
+                                        <a href="order.html" class="btn btn-danger btn-lg px-4 shadow"
+                                            role="button">Next Page</a>
+                                    </div>
+                                </div>
+                                
                             </div>
                         </form>
                     </div>
@@ -245,7 +259,6 @@
                             <i class="fa-solid fa-phone"></i> (555) 123-4567<br>
                             <i class="fa-solid fa-envelope"></i> <a class="text-white footer-link"
                                 href="mailto:contact@pizzapalace.com">contact@pizzapalace.com</a>
-
                         </address>
                     </section>
                     <aside class="col-md-3 text-center text-md-start mb-4">
@@ -253,35 +266,10 @@
                     </aside>
                 </div>
             </div>
-        </section>
 
     </main>
 
-    <!-- Footer -->
-    <footer class="bg-danger text-white text-center py-3">
-        <p class="mb-0">&copy; 2025 Pizza Palace. All rights reserved.</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/pizza-selection.js"></script>
-    <script src="https://kit.fontawesome.com/1a12f61d30.js" crossorigin="anonymous"></script>
-
-
-    <script>
-        // Parse query parameters from URL
-        const params = new URLSearchParams(window.location.search);
-        const selectedPizza = params.get('pizza');
-
-        // If a pizza was passed, set the corresponding radio button as checked
-        if (selectedPizza) {
-            const radio = document.querySelector(`input[name="pizza"][value="${selectedPizza}"]`);
-            if (radio) {
-                radio.checked = true;
-            }
-        }
-    </script>
-
-
+    <!--script src="/js/customize.js"></!--script>
 
 </body>
 
