--- a/customize.html
+++ b/customize.html
@@ -225,10 +225,10 @@
                                 <div class="col-6">
                                     <div class="mt-4 text-center">
                                         <a href="order.html" class="btn btn-danger btn-lg px-4 shadow"
-                                            role="button">Next Page</a>
+                                            role="button">Next Page ➤</a>
                                     </div>
                                 </div>
-                                
+
                             </div>
                         </form>
                     </div>
@@ -266,10 +266,16 @@
                     </aside>
                 </div>
             </div>
+        </section>
 
     </main>
 
-    <!--script src="/js/customize.js"></!--script>
+    <!-- Footer -->
+    <footer class="bg-danger text-white text-center py-3">
+        <p class="mb-0">&copy; 2025 Pizza Palace. All rights reserved.</p>
+    </footer>
+
+    <!-- script src="/js/customize.js"></!-->
 
 </body>
 
