--- a/order.html
+++ b/order.html
@@ -2,31 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Your Pizza Order</title>
     <link rel="icon" type="image/x-icon" href="./images/pizza-place-logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-        h2 {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
 
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        li {
-            margin-bottom: 0.5rem;
-        }
-
-        .label {
-            font-weight: 700;
-        }
-    </style>
 </head>
 
 <body>
@@ -57,65 +39,76 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section class="bg-dark hero text-center py-5">
-        <div class="container py-4">
-            <h1 class="text-white text-shadow"><b>Welcome to <span class="text-danger">P</span>izza <span
-                        class="text-danger">P</span>alace</b></h1>
-            <p class="lead-head text-white">Fresh, hot, and made just for you!</p>
-        </div>
-    </section>
-    <div class="bg-danger-border shadow-lg"></div>
+    <main>
 
-    <div style="background-color: #0d0d0d;">
-        <div class="container text-white py-5">
-            <h2>Your <span class="text-danger">P</span>izza <span class="text-danger">O</span>rder <span
-                    class="text-danger">S</span>ummary</h2>
-            <div class="row py-4">
-                <div class="col-12 col-md-8 mx-auto shadow p-4" style="background-color: #131313;">
-                    <div id="order-details" class="order-summary">
-                        Loading order details... will go here when javasript is active.
+        <!-- Hero Section -->
+        <section class="bg-dark hero text-center py-5">
+            <div class="container py-4">
+                <h1 class="text-white text-shadow"><b>Welcome to <span class="text-danger">P</span>izza <span
+                            class="text-danger">P</span>alace</b></h1>
+                <p class="lead-head text-white">Fresh, hot, and made just for you!</p>
+            </div>
+        </section>
+        <div class="bg-danger-border shadow-lg"></div>
+
+        <div style="background-color: #0d0d0d;">
+            <div class="container text-white py-5">
+                <h2 class="text-center mb-4">Your <span class="text-danger">P</span>izza <span
+                        class="text-danger">O</span>rder <span class="text-danger">S</span>ummary</h2>
+                <div class="row py-4">
+                    <div class="col-12 col-md-8 mx-auto shadow p-4" style="background-color: #131313;">
+                        <div id="order-details" class="order-summary">
+                            Loading order details... will go here when javasript is active.
+                        </div>
+                    </div>
+                    <div class="col-12 text-center mt-5">
+                        <p style="font-size: larger; font-weight: 600;">Congratulations! You are our hundredth visitor.
+                            Your pizza is complimentary!</p>
                     </div>
                 </div>
-                <div class="col-12 text-center mt-5">
-                    <p style="font-size: larger; font-weight: 600;" >Congration, you're our 100th guest. Your Pizza is free!!</p>
+            </div>
+        </div>
+
+        <!-- Contact & Location Section -->
+        <section id="visit-us" class="pt-5 pb-4 bg-dark text-white">
+            <div class="container">
+                <h2 class="text-center mb-5">Visit <span class="text-danger">U</span>s</h2>
+                <div class="row">
+                    <aside class="col-md-3 text-center text-md-start mb-4">
+                        <img src="./images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
+                    </aside>
+                    <section class="col-md-3 text-center text-md-start mb-4">
+                        <h5>Operating Hours</h5>
+                        <ul class="list-unstyled">
+                            <li>Monday – Friday: 11am – 10pm</li>
+                            <li>Saturday – Sunday: 12pm – 11pm</li>
+                        </ul>
+                    </section>
+                    <section class="col-md-3 text-center text-md-start mb-4">
+                        <h5>Our Location</h5>
+                        <address><i class="fa-solid fa-map"></i>
+                            123 Pizza Street<br>
+                            Cheesetown, NY 10001<br>
+                            <i class="fa-solid fa-phone"></i> (555) 123-4567<br>
+                            <i class="fa-solid fa-envelope"></i> <a class="text-white footer-link"
+                                href="mailto:contact@pizzapalace.com">contact@pizzapalace.com</a>
+                        </address>
+                    </section>
+                    <aside class="col-md-3 text-center text-md-start mb-4">
+                        <a href="#"><img src="./images/map.jpg" class="w-75 img-fluid shadow" alt="Map"></a>
+                    </aside>
                 </div>
             </div>
-        </div>
-    </div>
+        </section>
 
-    <!-- Contact & Location Section -->
-    <section id="visit-us" class="pt-5 pb-4 bg-dark text-white">
-        <div class="container">
-            <h2 class="text-center mb-5">Visit <span class="text-danger">U</span>s</h2>
-            <div class="row">
-                <aside class="col-md-3 text-center text-md-start mb-4">
-                    <img src="./images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
-                </aside>
-                <section class="col-md-3 text-center text-md-start mb-4">
-                    <h5>Operating Hours</h5>
-                    <ul class="list-unstyled">
-                        <li>Monday – Friday: 11am – 10pm</li>
-                        <li>Saturday – Sunday: 12pm – 11pm</li>
-                    </ul>
-                </section>
-                <section class="col-md-3 text-center text-md-start mb-4">
-                    <h5>Our Location</h5>
-                    <address><i class="fa-solid fa-map"></i>
-                        123 Pizza Street<br>
-                        Cheesetown, NY 10001<br>
-                        <i class="fa-solid fa-phone"></i> (555) 123-4567<br>
-                        <i class="fa-solid fa-envelope"></i> <a class="text-white footer-link"
-                            href="mailto:contact@pizzapalace.com">contact@pizzapalace.com</a>
-                    </address>
-                </section>
-                <aside class="col-md-3 text-center text-md-start mb-4">
-                    <a href="#"><img src="./images/map.jpg" class="w-75 img-fluid shadow" alt="Map"></a>
-                </aside>
-            </div>
-        </div>
+    </main>
 
-        <!--script src="/js/order.js"></!--script>
+    <!-- Footer -->
+    <footer class="bg-danger text-white text-center py-3">
+        <p class="mb-0">&copy; 2025 Pizza Palace. All rights reserved.</p>
+    </footer>
+
+    <!-- script src="/js/order.js"></!-->
 
 </body>
 
