--- a/order.html
+++ b/order.html
@@ -58,7 +58,7 @@
                 <div class="row py-4">
                     <div class="col-12 col-md-8 mx-auto shadow p-4" style="background-color: #131313;">
                         <div id="order-details" class="order-summary">
-                            Loading order details... will go here when javasript is active.
+                            Loading order details... will go here when javascript is active.
                         </div>
                     </div>
                     <div class="col-12 text-center mt-5">
