changed Next Page to Order Summary. Added jpg and PDF of new Wireframe and WireFlow

--- a/customize.html
+++ b/customize.html
@@ -225,7 +225,7 @@
                                 <div class="col-6">
                                     <div class="mt-4 text-center">
                                         <a href="order.html" class="btn btn-danger btn-lg px-4 shadow"
-                                            role="button">Next Page ➤</a>
+                                            role="button">Order Summary ➤</a>
                                     </div>
                                 </div>
 
