add required for all contact form info

--- a/customize.html
+++ b/customize.html
@@ -191,7 +191,7 @@
                                     <!-- Last Name -->
                                     <div class="col-md-6 mb-3">
                                         <label for="last-name" class="form-label">Last Name</label>
-                                        <input type="text" class="form-control" id="last-name" name="last_name">
+                                        <input type="text" class="form-control" id="last-name" name="last_name" required>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -203,7 +203,7 @@
                                     <!-- Phone Number -->
                                     <div class="col-md-6 mb-3">
                                         <label for="phone" class="form-label">Phone Number</label>
-                                        <input type="tel" class="form-control" id="phone" name="phone">
+                                        <input type="tel" class="form-control" id="phone" name="phone" required>
                                     </div>
                                 </div>
                                 <!-- Message -->
