--- a/customize.html
+++ b/customize.html
@@ -191,7 +191,8 @@
                                     <!-- Last Name -->
                                     <div class="col-md-6 mb-3">
                                         <label for="last-name" class="form-label">Last Name</label>
-                                        <input type="text" class="form-control" id="last-name" name="last_name" required>
+                                        <input type="text" class="form-control" id="last-name" name="last_name"
+                                            required>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -273,7 +274,9 @@
         <p class="mb-0">&copy; 2025 Pizza Palace. All rights reserved.</p>
     </footer>
 
-    <!-- script src="/js/customize.js"></!-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- script src="/js/pizza-selection.js"></!-->
+    <script src="https://kit.fontawesome.com/1a12f61d30.js" crossorigin="anonymous"></script>
 
 </body>
 
