--- a/order.html
+++ b/order.html
@@ -108,7 +108,9 @@
         <p class="mb-0">&copy; 2025 Pizza Palace. All rights reserved.</p>
     </footer>
 
-    <!-- script src="/js/order.js"></!-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- script src="/js/pizza-selection.js"></!-->
+    <script src="https://kit.fontawesome.com/1a12f61d30.js" crossorigin="anonymous"></script>
 
 </body>
 
