--- a/customize.html
+++ b/customize.html
@@ -57,7 +57,7 @@
                 <i class="fa-solid fa-pizza-slice fa-2xl d-block text-center mb-4"></i>
 
                 <div class="row justify-content-center">
-                    <div class="col-md-8">
+                    <div class="col-12 col-md-8">
                         <form id="pizzaForm" class="form-bg p-5">
                             <!-- Pizza Section -->
                             <fieldset class="mb-3">
@@ -183,13 +183,13 @@
                                 <legend class="form-label"><b>Your Information:</b></legend>
                                 <div class="row">
                                     <!-- First Name -->
-                                    <div class="col-md-6 mb-3">
+                                    <div class="col-12 col-md-6 mb-3">
                                         <label for="first-name" class="form-label">First Name</label>
                                         <input type="text" class="form-control" id="first-name" name="first_name"
                                             required>
                                     </div>
                                     <!-- Last Name -->
-                                    <div class="col-md-6 mb-3">
+                                    <div class="col-12 col-md-6 mb-3">
                                         <label for="last-name" class="form-label">Last Name</label>
                                         <input type="text" class="form-control" id="last-name" name="last_name"
                                             required>
@@ -197,12 +197,12 @@
                                 </div>
                                 <div class="row">
                                     <!-- Email -->
-                                    <div class="col-md-6 mb-3">
+                                    <div class="col-12 col-md-6 mb-3">
                                         <label for="email" class="form-label">Email Address</label>
                                         <input type="email" class="form-control" id="email" name="email" required>
                                     </div>
                                     <!-- Phone Number -->
-                                    <div class="col-md-6 mb-3">
+                                    <div class="col-12 col-md-6 mb-3">
                                         <label for="phone" class="form-label">Phone Number</label>
                                         <input type="tel" class="form-control" id="phone" name="phone" required>
                                     </div>
@@ -240,17 +240,17 @@
             <div class="container">
                 <h2 class="text-center mb-5">Visit <span class="text-danger">U</span>s</h2>
                 <div class="row">
-                    <aside class="col-md-3 text-center text-md-start mb-4">
+                    <aside class="col-12 col-md-3 text-center text-md-start mb-4">
                         <img src="./images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
                     </aside>
-                    <section class="col-md-3 text-center text-md-start mb-4">
+                    <section class="col-12 col-md-3 text-center text-md-start mb-4">
                         <h5>Operating Hours</h5>
                         <ul class="list-unstyled">
                             <li>Monday – Friday: 11am – 10pm</li>
                             <li>Saturday – Sunday: 12pm – 11pm</li>
                         </ul>
                     </section>
-                    <section class="col-md-3 text-center text-md-start mb-4">
+                    <section class="col-12 col-md-3 text-center text-md-start mb-4">
                         <h5>Our Location</h5>
                         <address><i class="fa-solid fa-map"></i>
                             123 Pizza Street<br>
@@ -260,7 +260,7 @@
                                 href="mailto:contact@pizzapalace.com">contact@pizzapalace.com</a>
                         </address>
                     </section>
-                    <aside class="col-md-3 text-center text-md-start mb-4">
+                    <aside class="col-12 col-md-3 text-center text-md-start mb-4">
                         <a href="#"><img src="./images/map.jpg" class="w-75 img-fluid shadow" alt="Map"></a>
                     </aside>
                 </div>
