--- a/order.html
+++ b/order.html
@@ -74,17 +74,17 @@
             <div class="container">
                 <h2 class="text-center mb-5">Visit <span class="text-danger">U</span>s</h2>
                 <div class="row">
-                    <aside class="col-md-3 text-center text-md-start mb-4">
+                    <aside class="col-12 col-md-3 text-center text-md-start mb-4">
                         <img src="./images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
                     </aside>
-                    <section class="col-md-3 text-center text-md-start mb-4">
+                    <section class="col-12 col-md-3 text-center text-md-start mb-4">
                         <h5>Operating Hours</h5>
                         <ul class="list-unstyled">
                             <li>Monday – Friday: 11am – 10pm</li>
                             <li>Saturday – Sunday: 12pm – 11pm</li>
                         </ul>
                     </section>
-                    <section class="col-md-3 text-center text-md-start mb-4">
+                    <section class="col-12 col-md-3 text-center text-md-start mb-4">
                         <h5>Our Location</h5>
                         <address><i class="fa-solid fa-map"></i>
                             123 Pizza Street<br>
@@ -94,7 +94,7 @@
                                 href="mailto:contact@pizzapalace.com">contact@pizzapalace.com</a>
                         </address>
                     </section>
-                    <aside class="col-md-3 text-center text-md-start mb-4">
+                    <aside class="col-12 col-md-3 text-center text-md-start mb-4">
                         <a href="#"><img src="./images/map.jpg" class="w-75 img-fluid shadow" alt="Map"></a>
                     </aside>
                 </div>
