--- a/order.html
+++ b/order.html
@@ -109,7 +109,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- script src="/js/pizza-selection.js"></!-->
+    <!-- script src="/js/order.js"></!-->
     <script src="https://kit.fontawesome.com/1a12f61d30.js" crossorigin="anonymous"></script>
 
 </body>
