--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <aside class="col-12 col-md-3 text-center text-md-start mb-4">
                         <img src="./images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
                     </aside>
-                    <section class="col-md-3 text-center text-md-start mb-4">
+                    <section class="col-12 col-md-3 text-center text-md-start mb-4">
                         <h5>Operating Hours</h5>
                         <ul class="list-unstyled">
                             <li>Monday – Friday: 11am – 10pm</li>
