--- a/customize.html
+++ b/customize.html
@@ -102,7 +102,7 @@
                             <!-- Toppings Section -->
                             <fieldset class="mb-3">
                                 <legend class="form-label"><b>Toppings:</b></legend>
-                                <p class="p-section-bg w-100 w-100-mobile p-2">Choose Cheese <i
+                                <p class="p-section-bg w-100 p-2">Choose Cheese <i
                                         class="fa-solid fa-cheese"></i></p>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="checkbox" name="extra-cheese"
