update html css

--- a/order.html
+++ b/order.html
@@ -51,12 +51,12 @@
         </section>
         <div class="bg-danger-border shadow-lg"></div>
 
-        <div style="background-color: #0d0d0d;">
+        <div class="main-order-bg">
             <div class="container text-white py-5">
                 <h2 class="text-center mb-4">Your <span class="text-danger">P</span>izza <span
                         class="text-danger">O</span>rder <span class="text-danger">S</span>ummary</h2>
                 <div class="row py-4">
-                    <div class="col-12 col-md-8 mx-auto shadow p-4" style="background-color: #131313;">
+                    <div class="col-12 col-md-8 mx-auto shadow sub-main-bg p-4">
                         <div id="order-details" class="order-summary">
                             Loading order details... will go here when javascript is active.
                         </div>
